contour/canary-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: canarylab-data-svc-v1
    monitor: canary
  name: canarylab-data-svc-v1
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app: canarylab-data-svc-v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: canarylab-data-svc-v1
    monitor: canary
  name: canarylab-data-svc-v1
spec:
  replicas: 4
  selector:
    matchLabels:
      app: canarylab-data-svc-v1
  template:
    metadata:
      labels:
        app: canarylab-data-svc-v1
    spec:
      containers:
      - image: quay.io/lander2k2/canary_data_svc:v1
        name: data-svc
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: canarylab-data-svc-v2
    monitor: canary
  name: canarylab-data-svc-v2
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app: canarylab-data-svc-v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: canarylab-data-svc-v2
    monitor: canary
  name: canarylab-data-svc-v2
spec:
  replicas: 4
  selector:
    matchLabels:
      app: canarylab-data-svc-v2
  template:
    metadata:
      labels:
        app: canarylab-data-svc-v2
    spec:
      containers:
      - image: quay.io/lander2k2/canary_data_svc:v2
        #command: ["/data-svc", "error"]  # will cause intermittent 500s to be returned
        #command: ["/data-svc", "slow"]  # will induce intermittent slow responses
        name: data-svc
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
      restartPolicy: Always
